syntax = "proto3";

service ServiceA {
    rpc Sum (SumRequest) returns (SumResponse);
}

message SumRequest {
    int32 a = 1;
    int32 b = 2;
}

message SumResponse {
    int32 result = 1;
}
